src/objects/LeadAccountMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Account_API_Name__c</fullName>
        <label>Account API Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Field_Name__c</fullName>
        <label>Account Field Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_API_Name__c</fullName>
        <label>Lead API Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>LeadAccountMapping</label>
</CustomObject>